# OpenDigitalPedal

./: Overdrive.md  README.md  run.sh
code/: Build.sh  CMakeLists.txt  clean.sh  run.sh
code/inc/: clip.h  filter.h  sampleType.h  scale.h
code/src/: clip.cpp  filter.cpp  main.cpp  scale.cpp
